[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scirpts/TopMenuContainer.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 626.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 228.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileMenu" type="MenuButton" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "File"
flat = false
align = 0
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "Open File", null, 0, false, false, 1, 0, null, "", false, "Save File", null, 0, false, false, 2, 0, null, "", false, "Save File As", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditMenu" type="MenuButton" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit"
flat = false
align = 0
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false, "Item 3", null, 0, false, false, 3, 0, null, "", false ]

[node name="FormatMenu" type="MenuButton" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 136.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Format"
flat = false
align = 0
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false, "Item 3", null, 0, false, false, 3, 0, null, "", false ]

[node name="ViewMenu" type="MenuButton" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 182.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "View"
flat = false
align = 0
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false, "Item 3", null, 0, false, false, 3, 0, null, "", false ]

[node name="HelpMenu" type="MenuButton" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 228.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Help"
flat = false
align = 0
items = [ "What's This?", null, 0, false, false, 0, 0, null, "", false, "Get Involved", null, 0, false, false, 1, 0, null, "", false, "License Information", null, 0, false, false, 2, 0, null, "", false, "Check For Updates", null, 0, false, false, 3, 0, null, "", false, "About KaizenCalligrapher", null, 0, false, false, 4, 0, null, "", false ]

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 626.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 250 )
window_title = "Save Document As"
resizable = true
access = 2
filters = PoolStringArray( "*.docx", "*.docm", "*.odt", "*.txt", "*.sxw", "*.xml", "*.docm" )
show_hidden_files = true
current_dir = "/users"
current_path = "/users/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 250 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.docx", "*.docm", "*.odt", "*.txt", "*.sxw", "*.xml", "*.docm" )
show_hidden_files = true
current_dir = "/users"
current_path = "/users/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_selected" from="SaveFile" to="." method="_on_SaveFile_file_selected"]
[connection signal="file_selected" from="OpenFile" to="." method="_on_OpenFile_file_selected"]
